# GZRAgent

./: .env.example  .gitignore  README.md  app.py  debug_logs.py  design.md  docker-compose.yml  nginx.conf  openclaw.md  requirements.txt  skills.md  tech_stack.md  test_typst.py  test_v2_orchestrator.py
backend/: .env.example  Dockerfile  README.md  gateway.py  main.py  pyproject.toml  requirements.txt  test_output.txt
backend/app/: __init__.py  config.py  crypto.py  db.py  main.py
backend/app/agents/: __init__.py  data_analyst_agent.py  diagram_agent.py  format_agent.py  human_proxy_agent.py  pi_agent.py  red_team_agent.py  researcher_agent.py  writer_agent.py
backend/app/api/: auth.py  sessions.py  websocket.py
backend/app/core/: __init__.py
backend/app/core/a2a/: __init__.py  bus.py  validator.py
backend/app/core/acp/: __init__.py  base_agent.py  state_machine.py
backend/app/core/anp/: __init__.py  blackboard.py  circuit_breaker.py  deadlock.py  registry.py
backend/app/core/l1/: __init__.py  academic_search.py  code_sandbox.py  document_export.py  evidence_service.py  llm_provider.py  retriever.py
backend/app/core/l1/providers/: custom_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/app/models/: __init__.py  a2a.py  agent.py  document.py  errors.py  llm_settings.py  session.py
backend/app/workflow/: context.py  graph.py  prompts.py
backend/routers/: export.py  history.py  knowledge.py  preferences.py  template.py  workflow.py
backend/tests/: test_models.py
data/: NSFC_Draft_1771928214.docx  NSFC_Draft_1771933918.docx  NSFC_面上项目_1772200613.docx  NSFC_面上项目_1772260127.typ  (+1 more)
src/: llm.py  (+2 more)
(+79 files in other folders)
